# ReadMate

./: Cargo.toml  LICENSE  Makefile  README.md
app/android/: gradlew
app/android/app/: build.gradle
app/android/app/src/androidTest/java/com/sroka/readmate/: ExampleInstrumentedTest.kt
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/sroka/readmate/: IdentityId.kt  MainActivity.kt  MainApplication.kt  UniffiUtils.kt
app/android/app/src/main/java/com/sroka/readmate/books/: BooksFragment.kt  BooksRecyclerViewAdapter.kt
app/android/app/src/main/java/com/sroka/readmate/books/placeholder/: PlaceholderContent.kt
app/android/app/src/main/java/com/sroka/readmate/pages/: PagesFragment.kt  PagesRecyclerViewAdapter.kt
app/android/app/src/main/res/drawable/: ic_error.xml  ic_launcher_foreground.xml
app/android/app/src/main/res/layout/: activity_main.xml  fragment_books.xml  fragment_books_list.xml  fragment_page.xml  fragment_pages_list.xml
app/android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/android/app/src/test/java/com/sroka/readmate/: ExampleUnitTest.kt
bindings/ffi/: Cargo.toml  README.md  build.rs  uniffi.toml
bindings/ffi/src/: books_state.rs  domain.rs  global_bindings.rs  global_bindings.udl  global_state.rs  lib.rs  pages_state.rs  pdfium_manager.rs
